Implemented the JWT token Auth